# ras-backend

./: .gitignore  docker-compose.yml  openapi.json
backend/: .dockerignore  dockerfile  pyproject.toml
backend/app/api/: main.py
backend/app/api/v1/: me.py  ras.py
backend/app/core/: config.py  db.py
backend/app/models/: schemas.py
backend/app/repos/: employees.py  ras_repo.py
backend/app/services/: ras_service.py
backend/db/: generate_data.py  schema.sql
db/: reset.sql  seed.sql
