[project]
name = "ras-assistant-api"
version = "0.1.0"
description = "Backend API per RAS Assistant (timesheet)"
requires-python = ">=3.10.12"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "psycopg[binary]>=3.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
